--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 obcaecati rem ad sit nisi quod saepe <b>possimus</b>.
             </p>
             <nav>
-                <a href="https://www.linkedin.com/feed/" target="_blank" class="card">Linkedin</a>
+                <a href="https://www.linkedin.com/in/cemil-koybasi/" target="_blank" class="card">Linkedin</a>
                 <a href="https://github.com/cemilkb" target="_blank" class="card">Github</a>
                 <a href="https://www.instagram.com/koybasi_cemil/" target="_blank" class="card">Instagram</a>
             </nav>
